; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_cgroup.c_manager_notify_cgroup_empty.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_cgroup.c_manager_notify_cgroup_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [38 x i8] c"Got cgroup empty notification for: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @manager_notify_cgroup_empty(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @assert(i8* %7)
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @assert(i8* %9)
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @log_debug(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i8* %11)
  %13 = load i8*, i8** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32* @manager_get_unit_by_cgroup(i8* %13, i8* %14)
  store i32* %15, i32** %6, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %22

19:                                               ; preds = %2
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @unit_add_to_cgroup_empty_queue(i32* %20)
  store i32 1, i32* %3, align 4
  br label %22

22:                                               ; preds = %19, %18
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @log_debug(i8*, i8*) #1

declare dso_local i32* @manager_get_unit_by_cgroup(i8*, i8*) #1

declare dso_local i32 @unit_add_to_cgroup_empty_queue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
